--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/style.css">
     
-    
+
 </head>
 <body>
     <nav class="navegador">
@@ -28,6 +28,12 @@
     </header>
     <main>
         <section class="productos">
+            <div class="producto">
+                <img src="./multimedia/img/llave.jpg" alt="">
+                <h5>Lorem ipsum dolor sit amet.</h5>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rerum, dignissimos.</p>
+                <button class="boton">Carrito</button>
+            </div>
             <div class="producto">
                 <img src="./multimedia/img/llave.jpg" alt="">
                 <h5>Lorem ipsum dolor sit amet.</h5>
